# elbrus-bot

./: .template.env  pyproject.toml
alembic/: env.py
alembic/versions/: 3a8994e8225b_init.py  4866323465e4_add_fields_to_eventmodel.py  6cace797ee57_add_chat_model.py
app/: __init__.py  actons.py  dal.py  db.py  handlers.py  jobs.py  jokes.py  kb.py  main.py  middlewares.py  models.py  services.py  settings.py  sheduler.py  states.py  utils.py
app/alembic/versions/: db6eb5572d96_add_event_model.py
app/dal/: __init__.py  boys.py  chat.py  events.py  sport.py
app/handlers/: __init__.py  events.py  main.py  sport.py
app/handlers/events/: __init__.py  create.py  delete.py  read.py  update.py  utils.py
