[tool.poetry]
name = "elbrus-bot"
version = "0.1.0"
description = ""
authors = ["Emil Muhitdinov <laizybot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.13.1"
pydantic-settings = "^2.5.2"
aiogram-tests = "^1.0.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
